<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:showDividers="middle"
    android:divider="@drawable/vspacing"
    android:background="@color/gray"
    android:padding="@dimen/keyboard_padding">
    <!--qwertyuiop-->
    <LinearLayout
        android:showDividers="middle"
        android:divider="@drawable/hspacing"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--q-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="q"/>
        <!--w-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="w"/>
        <!--e-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="e"/>
        <!--r-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="r"/>
        <!--t-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="t"/>
        <!--y-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="y"/>
        <!--u-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="u"/>
        <!--i-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="i"/>
        <!--o-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="o"/>
        <!--p-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="p"/>
    </LinearLayout>

    <!--asdfghjkl-->
    <LinearLayout
        android:showDividers="middle"
        android:divider="@drawable/hspacing"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--a-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="a"/>
        <!--s-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="s"/>
        <!--d-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="d"/>
        <!--f-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="f"/>
        <!--g-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="g"/>
        <!--h-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="h"/>
        <!--j-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="j"/>
        <!--k-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="k"/>
        <!--l-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="l"/>
    </LinearLayout>

    <!--shift zxcvbnm delete-->
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--shift-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/icons"
            android:text="@string/ic_shift"
            app:keyType="shift"
            android:textSize="@dimen/shift_text_size"
            android:layout_weight="1"/>
        <android.support.v4.widget.Space
            android:layout_width="@dimen/space_width"
            android:layout_height="0dp" />
        <!--z-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="z"/>
        <android.support.v4.widget.Space
            android:layout_width="@dimen/space_width"
            android:layout_height="0dp" />
        <!--x-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="x"/>
        <android.support.v4.widget.Space
            android:layout_width="@dimen/space_width"
            android:layout_height="0dp" />
        <!--c-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="c"/>
        <android.support.v4.widget.Space
            android:layout_width="@dimen/space_width"
            android:layout_height="0dp" />
        <!--v-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="v"/>
        <android.support.v4.widget.Space
            android:layout_width="@dimen/space_width"
            android:layout_height="0dp" />
        <!--b-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="b"/>
        <android.support.v4.widget.Space
            android:layout_width="@dimen/space_width"
            android:layout_height="0dp" />
        <!--n-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="n"/>
        <android.support.v4.widget.Space
            android:layout_width="@dimen/space_width"
            android:layout_height="0dp" />
        <!--m-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="m"/>
        <android.support.v4.widget.Space
            android:layout_width="@dimen/space_width"
            android:layout_height="0dp" />
        <!--清除键-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/icons"
            android:text="@string/ic_clear"
            app:keyType="delete"
            android:textSize="@dimen/delete_text_size"
            android:background="@drawable/keybutton_background_pressed"
            android:textColor="@color/white"
            android:layout_weight="1"/>
    </LinearLayout>

    <!--bottom-->
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--跳转到数字键盘-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/icons"
            android:text="@string/ic_number"
            android:textSize="@dimen/to_number_text_size"
            app:keyType="to_number"
            android:background="@drawable/keybutton_background_pressed"
            android:textColor="@color/white"
            android:layout_weight="2"/>
        <android.support.v4.widget.Space
            android:layout_width="@dimen/space_width"
            android:layout_height="0dp" />
        <!--跳转到符号键盘-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/icons"
            android:text="@string/ic_symbol"
            android:textSize="@dimen/to_symbol_text_size"
            app:keyType="to_symbol"
            android:background="@drawable/keybutton_background_pressed"
            android:textColor="@color/white"
            android:layout_weight="2"/>
        <android.support.v4.widget.Space
            android:layout_width="@dimen/space_width"
            android:layout_height="0dp" />
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="," />
        <android.support.v4.widget.Space
            android:layout_width="@dimen/space_width"
            android:layout_height="0dp" />
        <!--空格-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/icons"
            android:text="@string/ic_space"
            android:layout_weight="6"
            app:keyType="space"/>
        <android.support.v4.widget.Space
            android:layout_width="@dimen/space_width"
            android:layout_height="0dp" />
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="." />
        <android.support.v4.widget.Space
            android:layout_width="@dimen/space_width"
            android:layout_height="0dp" />
        <!--中英文转换键-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/icons"
            android:text="@string/ic_chinese"
            app:keyType="toggle_ec"
            android:background="@drawable/keybutton_background_pressed"
            android:textColor="@color/white"
            android:textSize="@dimen/ce_text_size"
            android:layout_weight="2"/>
        <android.support.v4.widget.Space
            android:layout_width="@dimen/space_width"
            android:layout_height="0dp" />
        <!--回车键-->
        <com.example.lgh.simpleinputmethod.custom.Keybutton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_return"
            app:keyType="newline"
            android:textSize="@dimen/ret_text_size"
            android:layout_weight="2"
            android:background="@drawable/keybutton_background_pressed"
            android:textColor="@color/white"
            android:fontFamily="@font/icons"/>
    </LinearLayout>
</LinearLayout>